Added hadnling for some errors. Corrected signUp wont send to requests at one sing in. Corrected funcionality of loadENV. Added new chat scen change. Rework after wrong merge